Following changes were made
	1- Edited the Manual script
	2- Edited Makefile
	3- Edited the start qemu termianal script

Signed-off-by: taha.sami <tahasami@gmail.com>

--- a/finder-app/Makefile
+++ b/finder-app/Makefile
@@ -5,7 +5,7 @@ TARGET = writer
 all: $(TARGET)
 
 $(TARGET): writer.o
-	$(CC) $(CFLAGS) -o $(TARGET) writer.o
+	$(CC) $(CFLAGS) -static -o $(TARGET) writer.o
 
 writer.o: writer.c
 	$(CC) $(CFLAGS) -c writer.c
