--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -22,25 +22,7 @@ jobs:
           - uses: actions/checkout@v2
           - name: Checkout submodules
             run : git submodule update --init --recursive
-
-# Cache compiled kernel
-          - name: Cache kernel
-            uses: actions/cache@v3
-            with:
-              path: /tmp/aesd-autograder/linux-stable
-              key: ${{ runner.os }}-kernel-cache-${{ hashFiles('path/to/kernel/config/file') }}
-              restore-keys: |
-                ${{ runner.os }}-kernel-cache-
-          
-          # Skip kernel build if cached version exists
-          - name: Build or reuse kernel
-            run: |
-              if [ ! -f /tmp/aesd-autograder/linux-stable/Image ]; then
-                echo "Kernel image not found, recompiling..."
-                ./build-kernel.sh  # Replace with actual kernel build script
-              else
-                echo "Kernel image found, skipping recompilation."
-              fi
-
+          - name: Add ARM Cross Compiler to PATH
+            run: echo "/home/taha/Desktop/arm_GNU_toolchain/arm-gnu-toolchain-13.3.rel1-x86_64-aarch64-none-linux-gnu/bin" >> $GITHUB_PATH
           - name: Run full test
             run: ./full-test.sh
