--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -23,6 +23,6 @@ jobs:
           - name: Checkout submodules
             run : git submodule update --init --recursive
           - name: Add ARM Cross Compiler to PATH
-            run: echo "/home/taha/Desktop/arm_GNU_toolchain/arm-gnu-toolchain-13.3.rel1-x86_64-aarch64-none-linux-gnu/bin" >> $GITHUB_PATH
+            run: echo "/home/taha/Desktop/arm_GNU_toolchain/arm-gnu-toolchain-13.3.rel1-x86_64-aarch64-none-linux-gnu/bin" >> $GITHUB_ENV
           - name: Run full test
             run: ./full-test.sh
